home page button now works, fixed menu alignment on home and mindfulness pages

--- a/restful-app/src/Components/BurgerMenu/styles.css
+++ b/restful-app/src/Components/BurgerMenu/styles.css
@@ -4,6 +4,7 @@
     width: 100vw;
     height: 100vh;
     transition: .5s;
+    
    
 }
 
@@ -144,7 +145,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
   background: #04023079;
   padding: 2.5em 1.5em 0;
   font-size: 1.15em;
-  z-index: 3;
+  position:initial;
 }
 
 /* Morph shape necessary with bubble or elastic */
