--- a/restful-app/src/Components/LandingPage/LavalampBackground/styles.css
+++ b/restful-app/src/Components/LandingPage/LavalampBackground/styles.css
@@ -47,7 +47,6 @@
     font-family: 'Lilita One';
     font-size: 5rem;
     color: white;
-    z-index: -1;
     margin-top: 1em;
     text-shadow: 0px 0px 10px rgb(181, 172, 73);
 
