--- a/restful-app/src/Components/Mindfulness/styles.css
+++ b/restful-app/src/Components/Mindfulness/styles.css
@@ -15,10 +15,7 @@
     color: #deddd7;
     text-shadow: 1px 1px 1px #9921E8;
     padding-top: 10px;
-    position: absolute;
-    margin: auto;
-    width: 550px;
-    
+
 }
 .pulse {
     height: 75px;
